--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,7 @@
                       <img src="./images/Facebook contact.svg" alt="facebook">
                       <img src="./images/Twitter contact.svg" alt="twitter"><br>
                       <img src="./images/map contact.svg" alt="map">
+                      <p>Copyright © 2021. Crafted with love.</p>
                   </div>
               </div>
         </div>
